'inicio de proyecto'

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="description" content="ServNort Ingeniería, es una empresa que ofrece un servicio integrado de diseño, fabricación, reparación, instalación, mantenimiento, automatización, modificaciones y asesoría para el sector industrial y minero en las especialidades de: Metalmecánica, Mecánica de Producción, Mecánica Industrial, Maquinaria pesada o Mantención y reparación de alternadores y motores de partida."/>
     <meta name="keywords" content="Metalmecánica, Maquinaria Pesada, Mecánica De Producción,Mecánica Industrial,Camiones Aljibe,Grúas de alto tonelaje,Montacargas, Elevadores,Tanques,Tuberias,Ductos,Escaleras,Rejas,Barandas,Parillas,Cercos perimetricos"/>
     <title>ServNort</title>
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/fontello.css">
+    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/fontello.css">
 </head>
 <body>
     
