'inicio de proyecto'

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     
     <header> 
-        <img id="trazo_1" src="/img/SVG/Trazado_1.svg"  loading="lazy" alt="">
+        <img id="trazo_1" src="img/SVG/Trazado_1.svg"  loading="lazy" alt="">
         <div class="barra">
             <nav>
                 <ul class="nav">
@@ -155,7 +155,7 @@
                 <li>
                     <a href="">
                         <div class="system-icon">
-                            <img src="/img/under_constructions.png" width="80px" height="80px" alt="">
+                            <img src="img/under_constructions.png" width="80px" height="80px" alt="">
                         </div>
                         <div class="system-info">
                             <div class="system_info">
@@ -168,7 +168,7 @@
                 <li>
                     <a href="">
                         <div class="system-icon">
-                            <img src="/img/under_constructions.png" width="80px" height="80px" alt="">
+                            <img src="img/under_constructions.png" width="80px" height="80px" alt="">
                         </div>
                         <div class="system-info">
                             <div class="system_info">
@@ -181,7 +181,7 @@
                 <li>
                     <a href="">
                         <div class="system-icon">
-                            <img src="/img/under_constructions.png" width="80px" height="80px" alt="">
+                            <img src="img/under_constructions.png" width="80px" height="80px" alt="">
                         </div>
                         <div class="system-info">
                             <div class="system_info">
@@ -194,7 +194,7 @@
                 <li>
                     <a href="">
                         <div class="system-icon">
-                            <img src="/img/under_constructions.png" width="80px" height="80px" alt="">
+                            <img src="img/under_constructions.png" width="80px" height="80px" alt="">
                         </div>
                         <div class="system-info">
                             <div class="system_info">
@@ -207,7 +207,7 @@
                 <li>
                     <a href="">
                         <div class="system-icon">
-                            <img src="/img/under_constructions.png" width="80px" height="80px" alt="">
+                            <img src="img/under_constructions.png" width="80px" height="80px" alt="">
                         </div>
                         <div class="system-info">
                             <div class="system_info">
@@ -220,7 +220,7 @@
                 <li>
                     <a href="">
                         <div class="system-icon">
-                            <img src="/img/under_constructions.png" width="80px" height="80px" alt="">
+                            <img src="img/under_constructions.png" width="80px" height="80px" alt="">
                         </div>
                         <div class="system-info">
                             <div class="system_info">
