--- a/index.html
+++ b/index.html
@@ -207,12 +207,12 @@
                 <li>
                     <a href="">
                         <div class="system-icon">
-                            <img src="img/under_constructions.png" width="80px" height="80px" alt="">
+                            <img src="img/productos/img1.jpg" width="80px" height="80px" alt="">
                         </div>
                         <div class="system-info">
                             <div class="system_info">
-                                 <h5>Vapor</h5>
-                                 <p>Plataforma sin servidor</p>
+                                 <h5>MANGUERAS HIDRÁULICAS</h5>
+                                 <p>Con una línea de mangueras hidráulicas de calidad que cumplen y exceden las normas internacionales </p>
                             </div>
                         </div>
                     </a>
@@ -280,6 +280,5 @@
 
     <script src="js/app.js"></script>
     <script src="js/clientes.js"></script>
-
 </body>
 </html>
