--- a/servicios.html
+++ b/servicios.html
@@ -90,7 +90,8 @@
                     <img src="img/SVG/faq-bg-1.png" class="img-fluid" alt="">
                 </div>
             </div>
-            <img id="Trazado_55" src="img/SVG/Trazado_55.svg" loading="lazy" alt="">
+            <img id="Trazado_55" src="img/SVG/Trazado_55.svg" style="margin-top: 180px;margin-left: -50px;"
+                 loading="lazy" alt="">
         </div>
     </section>
     <section class="nuestros-servicios">
