'inicio de proyecto'

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <section class="about-us" id="nosotros">
             <div class="container">
                 <img id="Trazado_55" src="img/SVG/Trazado_55.svg"  loading="lazy" alt="">
-                <img id="Trazado_7" src="img/SVG/undraw_mobile_user_7oqo.svg"  loading="lazy" alt="">
+                <img id="Trazado_7" src="img/SVG/about_us.svg"  loading="lazy" alt="">
                 <div class="about-info">
                      <h2>Quíenes Somos</h2>
                      <p>ServNort Ingeniería, es una empresa que ofrece 
