--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     áreas de diseño, fabricación y montaje 
                     de estructuras metálicas</p>
                     <div class="button">
-                        <a href="">leer mas</a>
+                        <a href="servicios.html">leer mas</a>
                     </div> 
                  </div>
 
@@ -75,7 +75,7 @@
                     <h3>Maquinaria Pesada</h3>
                     <p>Nuestras divisiones de reparación, mantenimiento y de servicio, está conformada por ingenieros y técnicos altamente calificados para cada línea de negocios.</p>
                     <div class="button">
-                        <a href="">leer mas</a>
+                        <a href="servicios.html">leer mas</a>
                     </div> 
                  </div>
 
@@ -84,7 +84,7 @@
                     <h3>Mecánica Industrial</h3>
                     <p> Se ofrece un plan integral de beneficios y asesoría especializada para sus requerimientos de estudios de ingeniería, instalación e implementación de sistemas integrales dentro del campo industrial, así como brindar un servicio de mantenimiento con el fin de lograr un desempeño óptimo en los distintos procesos de producción. Tales como: fabricación de lozas de lavado para maquinarias y componentes industriales, mantenimiento de plantas industriales, Iluminación, sistemas eléctricos de control, etc..</p>
                     <div class="button">
-                        <a href="">leer mas</a>
+                        <a href="servicios.html">leer mas</a>
                     </div> 
                  </div>
 
@@ -93,7 +93,7 @@
                     <h3>Mecánica De Producción</h3>
                     <p> la especialidad de Mecánica de producción brindamos el servicio de diseño, fabricación e instalación de partes y piezas para máquinas y equipos del sector industrial y minero, según los requerimientos de nuestros clientes, poniendo a su disposición nuestro personal profesional y técnico. Además realizamos trabajos de reconstrucciones de pieza y partes de máquinas para la industria y minería.</p>
                     <div class="button">
-                        <a href="">leer mas</a>
+                        <a href="servicios.html">leer mas</a>
                     </div> 
                  </div>
 
@@ -102,7 +102,7 @@
                     <h3>Mantención Y Reparación</h3>
                     <p>Motores de partida y alternadores: Mantención alternadores en general (12 – 24 volt.), mantención de motores de partida en general (12 – 24 volt.), reparaciones en general, bobinados, cambio de carbones, cambio de cajas reguladoras, cambio de inducido, cambio placas rectificadoras, etc.</p>
                     <div class="button">
-                        <a href="">leer mas</a>
+                        <a href="servicios.html">leer mas</a>
                     </div> 
                  </div>
                  
@@ -130,11 +130,24 @@
            <div class="content-clientes">
                <h2>Clientes</h2>
                <div class="clients">
+
                    <div class="client">
-                       <img src="img/under_constructions.png" alt="">
+                       <img src="img/productos/centinela.jpg" alt="">
                    </div>
                    <div class="client">
-                    <img src="img/under_constructions.png" alt="">
+                       <img src="img/productos/codelco.png" alt="">
+                   </div>
+                   <div class="client">
+                       <img src="img/productos/conymet.jpg" alt="">
+                   </div>
+                   <div class="client">
+                       <img src="img/productos/ultraport.jpg" alt="">
+                   </div>
+                   <div class="client">
+                       <img src="img/productos/sierragorda.jpg" alt="">
+                   </div>
+                   <div class="client">
+                       <img src="img/productos/minitec.png" alt="">
                    </div>
                 <!-- Next and previous buttons -->
                 <a class="prev" onclick="plusSlide(-1)">&#10094;</a>
@@ -143,6 +156,9 @@
                 <div class="dots" style="text-align:center">
                     <span class="do" onclick="currentSlide(1)"></span>
                     <span class="do" onclick="currentSlide(2)"></span>
+                    <span class="do" onclick="currentSlide(3)"></span>
+                    <span class="do" onclick="currentSlide(4)"></span>
+                    <span class="do" onclick="currentSlide(5)"></span>
                 </div>
                </div>
            </div>
@@ -155,12 +171,26 @@
                 <li>
                     <a href="">
                         <div class="system-icon">
-                            <img src="img/under_constructions.png" width="80px" height="80px" alt="">
+                            <img src="img/under_constructions.png" loading="lazy"  alt="">
                         </div>
                         <div class="system-info">
                             <div class="system_info">
-                                 <h5>Vapor</h5>
-                                 <p>Plataforma sin servidor</p>
+                                 <h5>Mangueras Industriales</h5>
+                                 <p>Una gama de mangueras flexible y mezclas en caucho, naturales y sintéticos para uso industrial.</p>
+                            </div>
+                        </div>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="">
+                        <div class="system-icon">
+                            <img src="img/productos/acoples3.PNG" loading="lazy"  alt="">
+                        </div>
+                        <div class="system-info">
+                            <div class="system_info">
+                                 <h5>ACOPLES</h5>
+                                 <p>Accesorios importados de muy alta calidad y rendimientos en la industria hidráulica.</p>
                             </div>
                         </div>
                     </a>
@@ -168,46 +198,21 @@
                 <li>
                     <a href="">
                         <div class="system-icon">
-                            <img src="img/under_constructions.png" width="80px" height="80px" alt="">
+                            <img src="img/productos/AdaptadoresHidraulicos.PNG" loading="lazy" alt="">
                         </div>
                         <div class="system-info">
                             <div class="system_info">
-                                 <h5>Vapor</h5>
-                                 <p>Plataforma sin servidor</p>
+                                 <h5>Adaptadores Hidraulicos</h5>
+                                 <p>Materiales altamente resistentes diseñados para trabajos de mediana, alta y extrema presión.</p>
                             </div>
                         </div>
                     </a>
                 </li>
+
                 <li>
                     <a href="">
                         <div class="system-icon">
-                            <img src="img/under_constructions.png" width="80px" height="80px" alt="">
-                        </div>
-                        <div class="system-info">
-                            <div class="system_info">
-                                 <h5>Vapor</h5>
-                                 <p>Plataforma sin servidor</p>
-                            </div>
-                        </div>
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <div class="system-icon">
-                            <img src="img/under_constructions.png" width="80px" height="80px" alt="">
-                        </div>
-                        <div class="system-info">
-                            <div class="system_info">
-                                 <h5>Vapor</h5>
-                                 <p>Plataforma sin servidor</p>
-                            </div>
-                        </div>
-                    </a>
-                </li>
-                <li>
-                    <a href="">
-                        <div class="system-icon">
-                            <img src="img/productos/img1.jpg" width="80px" height="80px" alt="">
+                            <img src="img/productos/img1.jpg" loading="lazy"  alt="">
                         </div>
                         <div class="system-info">
                             <div class="system_info">
@@ -217,15 +222,72 @@
                         </div>
                     </a>
                 </li>
+
                 <li>
                     <a href="">
                         <div class="system-icon">
-                            <img src="img/under_constructions.png" width="80px" height="80px" alt="">
+                            <img src="img/productos/valvulas.PNG" loading="lazy"  alt="">
                         </div>
                         <div class="system-info">
                             <div class="system_info">
-                                 <h5>Vapor</h5>
-                                 <p>Plataforma sin servidor</p>
+                                <h5>Válvulas Hidráulicas e Industriales</h5>
+                                <p>Válvulas de esfera, paso total con accionamiento manual con cuerpo de bronce cromados y acero inoxidable.</p>
+                            </div>
+                        </div>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="">
+                        <div class="system-icon">
+                            <img src="img/productos/lineaneumatica.PNG" loading="lazy"  alt="">
+                        </div>
+                        <div class="system-info">
+                            <div class="system_info">
+                                 <h5>Línea Neumática</h5>
+                                 <p>Ideal para la aplicación en la minería industrial, mecánica, construcción, automotriz, petroleo y equipo de compresiones de aires agua.</p>
+                            </div>
+                        </div>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="">
+                        <div class="system-icon">
+                            <img src="img/productos/ConexionesHidraulicas.PNG" loading="lazy" alt="">
+                        </div>
+                        <div class="system-info">
+                            <div class="system_info">
+                                <h5>Conexiones Hidráulicas</h5>
+                                <p>Utilizados para mangueras de 1,2,4 y 6 espirales de acero como lo son las mangueras R1,R2,4SH,R15.</p>
+                            </div>
+                        </div>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="">
+                        <div class="system-icon">
+                            <img src="img/productos/ConexionesParatubosHidraulicos.PNG" loading="lazy" alt="">
+                        </div>
+                        <div class="system-info">
+                            <div class="system_info">
+                                <h5>Conexiones Para Tubos Hidráulicos</h5>
+                                <p>Se utilizan en los sistemas hidráulicos para unir el tubo en los diferentes componentes del sistema.</p>
+                            </div>
+                        </div>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="">
+                        <div class="system-icon">
+                            <img src="img/productos/sistemetesteo.PNG" loading="lazy" alt="">
+                        </div>
+                        <div class="system-info">
+                            <div class="system_info">
+                                <h5>Sistema de Testeo</h5>
+                                <p>Diseñado para monitorias y controlar la presión de los sistemas hidráulicos en todo los niveles.</p>
                             </div>
                         </div>
                     </a>
